--- a/website/src/global.css
+++ b/website/src/global.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.shiki {
+    background-color: hsl(var(--background)) !important;
+}
+
 @layer base {
   :root {
     --background: 330, 7%, 5%;
